# PythonHtmlBuilder

./: README.md  pyproject.toml
src/: htmlBuilder.py
src/Html_Builder_Bradley_Hu/: htmlBuilder.py
tests/: test_1.py  test_file.py
